// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Characters Robot renders confusion marks and flower if female whale is confused 1`] = `
.c0 {
  margin: 6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <WhaleArtwork
    mood="confused"
  />
  <ConfusionMarks />
  <GenderFlower />
</div>
`;

exports[`COMPONENT - Characters Robot renders confusion marks if whale is confused 1`] = `
.c0 {
  margin: 6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <WhaleArtwork
    mood="confused"
  />
  <ConfusionMarks />
</div>
`;

exports[`COMPONENT - Characters Robot renders correctly with default props 1`] = `
.c0 {
  margin: 6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <WhaleArtwork
    mood="confused"
  />
  <ConfusionMarks />
</div>
`;

exports[`COMPONENT - Characters Robot renders flower if female gender is passed 1`] = `
.c0 {
  margin: 6rem 0 3rem 0;
  position: relative;
}

<div
  className="c0"
>
  <WhaleArtwork
    mood="confused"
  />
  <ConfusionMarks />
  <GenderFlower />
</div>
`;
